<?xml version="1.0"?>

<!DOCTYPE resources [<!ENTITY app_name "Ghost OTP"><!ENTITY project_url "https://github.com/ogtega/ghostotp">]>

<resources>
    <string name="app_name">&app_name;</string>
    <string name="settings_dest_label">Settings</string>
    <string name="new_account_dest_label">New Account</string>

    <string name="action_add">Add</string>
    <string name="action_next">Next</string>
    <string name="action_add_steam_guard">Log into your Steam account</string>
    <string name="action_manually_enter_key">Enter a provided key</string>
    <string name="action_copy_code">Copy code</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_rename_account">Rename account</string>
    <string name="action_rename">Rename</string>
    <string name="action_remove_account">Remove account</string>
    <string name="action_remove">Remove</string>
    <string name="action_done">Done</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan_barcode">Scan a barcode</string>

    <string name="label_account_name">Account name</string>
    <string name="label_secret_key">Secret key</string>
    <string name="label_counter_based">Counter based</string>
    <string name="label_password">Password</string>
    <string name="label_time_based">Time based</string>
    <string name="label_username">Username</string>
    <string name="label_steam_login">Steam Sign In</string>
    <string name="label_steam_recovery_code">Recovery Code</string>
    <string name="label_confirmations">Confirmations</string>

    <string name="message_remove_account">Remove %1$s?</string>
    <string name="message_rename_account">Rename %1$s?</string>
    <string name="message_key_too_short">Secret is too short.</string>
    <string name="message_key_invalid_chars">Secret is invalid.</string>
    <string name="message_otp_copied">Code copied to clipboard.</string>

    <string name="message_steam_recovery_code">
        This is your recovery code. It can be used to remove the authenticator from your account if
        you ever lose your device. Please write it down and keep it safe.
    </string>

    <string name="message_account_deletion">
        Removing this account will remove your ability to generate codes,
        however, it will not turn off 2-factor authentication. This may prevent you from signing into
        your account.
    </string>
    <string name="message_steam_deletion_recovery_code">"\n\nYour recovery code: %1$s"</string>

    <string name="preference_night_mode_key">night_mode</string>
    <string name="preference_night_mode_title">Night mode</string>
    <string name="preference_night_mode_summary">Use a dark theme</string>
    <string name="preference_biometrics_summary">Secure app data with biometric authentication</string>
    <string name="title_biometrics">Biometrics</string>
    <string name="preference_biometrics_key">biometrics</string>

    <string name="biometric_prompt_title">Verify your identity</string>
    <string name="biometric_prompt_subtitle">Use your biometric credential</string>
</resources>
