<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@+id/button_add"
      app:layout_constraintDimensionRatio="w,1:1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_default_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_key_input"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/layout_default_margin"
          android:hint="@string/label_secret_key"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/layout_name_input">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_secret_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textVisiblePassword"
            android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Single Material Design Spinner (aka Exposed Dropdown Menu) item.
        Follows Google'srecommended approach-->
        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_auth_type"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/layout_default_margin"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/layout_key_input">

          <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/input_auth_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionThreshold="0"
            android:editable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_name_input"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/layout_default_margin"
          android:hint="@string/label_account_name"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/button_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/activity_default_margin"
      android:text="@string/action_add"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>